<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:id="@+id/welcome_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/margin_30"
            android:textStyle="bold"
            android:textSize="@dimen/welcome_text_size"
            android:text="@string/welcome_to_our_score_kepper_app"/>

        <EditText
            android:id="@+id/team1_name_edit"
            android:layout_width="match_parent"
            android:hint="@string/name_of_first_team"
            android:layout_margin="@dimen/margin_10"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/team2_name_edit"
            android:layout_width="match_parent"
            android:hint="@string/name_of_second_team"
            android:layout_margin="@dimen/margin_10"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_game"
            android:textSize="@dimen/text_size_22"
            android:onClick="startGame"
            android:textColor="#FFFFFF"
            android:layout_margin="@dimen/margin_10"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="#FFFFFF"
            android:onClick="quitApp"
            android:textSize="@dimen/text_size_22"
            android:text="Quit"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/score_kepper_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/score_kepper"
            android:gravity="center"
            android:layout_margin="20dp"
            android:textSize="@dimen/text_size_45"
            android:textStyle="bold|italic"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/id_team1_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_16"
                    android:text="@string/team_a"
                    android:gravity="center"
                    android:textSize="@dimen/text_size_22"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/id_team1_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:paddingBottom="@dimen/padding_24"
                    android:text="0"
                    android:textColor="#000000"
                    android:textSize="@dimen/text_size_56"
                    />

                <Button
                    android:id="@+id/btn_increase_team1_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dim_8_dp"
                    android:layout_marginStart="@dimen/padding_24"
                    android:layout_marginEnd="@dimen/padding_24"
                    android:onClick="incrementTeam1Score"
                    android:text="@string/increment_score"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray">

            </LinearLayout>
            <!--
            <view
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray" />
            -->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/id_team2_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_16"
                    android:text="@string/team_a"
                    android:gravity="center"
                    android:textSize="@dimen/text_size_22"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/id_team2_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:paddingBottom="@dimen/padding_24"
                    android:text="0"
                    android:textColor="#000000"
                    android:textSize="@dimen/text_size_56"
                    />

                <Button
                    android:id="@+id/btn_increase_team2_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dim_8_dp"
                    android:layout_marginStart="@dimen/padding_24"
                    android:layout_marginEnd="@dimen/padding_24"
                    android:onClick="incrementTeam2Score"
                    android:text="@string/increment_score"
                    />

            </LinearLayout>

        </LinearLayout>
        <Button
            android:id="@+id/btn_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="reinitializeGame"
            android:text="@string/reset"
            android:layout_marginBottom="@dimen/margin_30" />
        <Button
            android:id="@+id/btn_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startNewGame"
            android:text="@string/new_game"
            android:layout_marginBottom="@dimen/margin_30" />
    </LinearLayout>
</LinearLayout>